# data-driven-gen

./: predict_music.ipynb  pyproject.toml
lession1/: hello_world.ipynb
lession2/: music.csv  music_recommender.ipynb
