[tool.poetry]
name = "data-driven-gen"
version = "0.1.0"
description = "This is a sample project"
authors = ["Ali Soltani <ali.soltani@red-gate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
